--- a/negocio/negocio.csproj
+++ b/negocio/negocio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="AccesoDatos.cs" />
     <Compile Include="CategoriaNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VoucherNegocio.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\modelo\modelo.csproj">
